[package]
name = "epitech-timeline-generator"
version = "0.1.0"
authors = ["Julien Philippon <julien.philippon@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epitech_api = "0.1.17"
serde = "1.0.101"
serde_json = "1.0.41"
regex = "1.3.1"
